Removed not necessary bean from configuration. Added a new endpoint to expose available algorithms. Added validation to algorithm endpoint. Added input and results in the Stats pojo. Added an ExecutorService to AlgorithmService in order to send the message in a different thread. This way if an exception occurs during the send invocation the client will get the results. (Before they would get an error)